--- a/mailarchive/pom.xml
+++ b/mailarchive/pom.xml
@@ -20,6 +20,7 @@
         <module>mailarchive-impl/impl</module>
         <module>mailarchive-impl/pack</module>
         <module>mailarchive-james/james</module>
+        <module>mailarchive-subetha</module>
         <module>mailarchive-tool/tool</module>
     </modules>
     
